# inlocker

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEBUGGING.md  README.md  cleanup-old-builds.sh  index.html  package.json  pnpm-lock.yaml  quickstart.md  test-cli-mode.sh  vite.config.ts
.husky/: post-commit
docs/: 01-value-proposition.md  02-architecture.md  03-tech-stack.md  04-roadmap.md  08-testing-strategy.md  USER-GUIDE.md  readme.md
docs/01-planning/: 01-value-proposition.md  02-architecture.md
docs/02-development/: 01-roadmap.md  02-quickstart.md  03-dev-guide.md  04-testing-strategy.md  05-schedule-testing.md
docs/03-systems/: 01-user-guide.md  02-inlog-system-guide.md
docs/04-bugs/: 001-restore-button-not-responding.md  002-scheduling-system-not-working.md
docs/05-marketing/: website-guide.md
public/: progress.html  progress.html.backup
scripts/git/: update-changelog.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  scheduled-progress.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  crypto.rs  launchd.rs  lib.rs  main.rs  scheduler.rs  types.rs
src-tauri/tests/: README.md  TEST_COVERAGE_REPORT.md  adversarial_tests.rs  backup_restore_integration.rs  critical_backup_tests.rs  critical_security_tests.rs  crypto_tests.rs  performance_tests.rs  scheduling_system_tests.rs  security_tests.rs
src/store/: useBackupStore.ts  usePreferencesStore.ts
src/ui/components/: BackupConfigModal.tsx  BackupList.tsx  FolderSelector.tsx  Layout.tsx  PreferencesModal.tsx  (+2 more)
