[package]
name = "inlocker"
version = "0.8.1"
description = "Automatic, compressed, and secure backups for macOS"
authors = ["InLocker Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inlocker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.5", features = [] }

[dependencies]
tauri = { version = "^2.9", features = [] }
tauri-plugin-single-instance = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-opener = "^2.5"
tauri-plugin-notification = "^2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42", features = ["full"] }
zstd = "0.13"
ring = "0.17"
notify = "7.0"
chrono = "0.4"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
tar = "0.4"
hex = "0.4"
uuid = { version = "1.10", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
zeroize = "1.8"
tauri-plugin-cli = "2.4.1"

[dev-dependencies]
sysinfo = "0.30"
